--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DB_HOST=127.0.0.1
 DB_USERNAME=root
 DB_PASSWORD=mysql
 DB_NAME=quanlysach
+
+CLIENT_ID = 978099845534-e6ijdkqfkt62qlukfar6ftd4hjd3k3qv.apps.googleusercontent.com
+CLIENT_SECRET = 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
+REDIRECT_URI = http://127.0.0.1:8081/google-callback
+
